[project]
name = "arxiv-researcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ecofie", email = "emmanuel.cofie@innovaxd.ca"},
]
dependencies = ["arxiv>=2.1.3", "llama-index>=0.12.10", "python-dotenv>=1.0.1", "notebook>=7.3.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
